--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,7 @@
     width: 100%;
     background-color: black;
     height: 180px;
-    color: white;
+    color: red;
     font-size: 110px;
     text-align: center;
     padding-top: 10px;
